finishing touches, readme update

--- a/handwriting.ipynb
+++ b/handwriting.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 152,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,14 +35,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 146,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy of KNN (k=5):0.71\n"
+      "Accuracy of KNN (k=5):0.79\n"
      ]
     }
    ],
@@ -50,7 +50,7 @@
     "# train a baseline KNN classifier \n",
     "\n",
     "# train test split\n",
-    "X_train, X_val, y_train, y_val = train_test_split(X, y, test_size=0.2, random_state=45)\n",
+    "X_train, X_val, y_train, y_val = train_test_split(X, y, test_size=0.2, random_state=12)\n",
     "\n",
     "# iniciate the model \n",
     "eucl_dist = FlatDist(ScipyDist())\n",
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 147,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -103,6 +103,31 @@
     ")\n",
     "\n",
     "print('mean accuracy:', round(np.mean(cross_h),2))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0 1 0 0 0 1 0 1 0 1 1 1 1 0 0 0 1 0 0 0 0 1 0 0]\n",
+      "mean accuracy: 0.7916666666666666\n"
+     ]
+    }
+   ],
+   "source": [
+    "knn_h = KNeighborsTimeSeriesClassifier(\n",
+    "    n_neighbors=4, \n",
+    "    distance=eucl_dist\n",
+    ")\n",
+    "knn_h.fit(X_train, y_train)\n",
+    "preds = knn_h.predict(X_val)\n",
+    "print(preds)\n",
+    "print('mean accuracy:', accuracy_score(y_val, preds))"
    ]
   },
   {
